<resources>
    <string name="app_name">DateTimeFragmentDialog</string>
    <string name="action_settings">Settings</string>
    <string name="date_picker_only">Date Picker Only</string>
    <string name="time_picker_only">Time Only 12Hours</string>
    <string name="date_and_time_picker"><![CDATA[Date & Time Picker]]></string>
    <string name="results_will_appear_here">Results will appear here.</string>
    <string name="date_picker_min_max"><![CDATA[Date Picker With Min & Max Date]]></string>
    <string name="date_time_picker_min_max"><![CDATA[Date & Time Picker With Custom Style, Pre-Selected Date & Time With Min & Max Date]]></string>
    <string name="time_picker_24hours_only">Time Only 24Hours</string>
    <string name="from_fragment">From Fragment</string>
</resources>
