<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="?android:windowBackground"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/results"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="@dimen/activity_horizontal_margin"
        android:text="@string/results_will_appear_here"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/datePickerOnly"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/date_picker_only"
            android:textAppearance="?android:textAppearanceSmall"/>

        <Button
            android:id="@+id/datePickerMinMaxPicker"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/date_picker_min_max"
            android:textAppearance="?android:textAppearanceSmall"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/timePickerOnly"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/time_picker_only"
                android:textAppearance="?android:textAppearanceSmall"/>

            <Button
                android:id="@+id/timePickerOnly24Hours"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/time_picker_24hours_only"
                android:textAppearance="?android:textAppearanceSmall"/>


        </LinearLayout>

        <Button
            android:id="@+id/dateAndTimePicker"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/date_and_time_picker"
            android:textAppearance="?android:textAppearanceSmall"/>

    </LinearLayout>

    <Button
        android:id="@+id/ultimatePicker"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/date_time_picker_min_max"
        android:textAppearance="?android:textAppearanceSmall"/>

    <Button
        android:id="@+id/fromFragment"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/from_fragment"
        android:textAppearance="?android:textAppearanceSmall"/>

</LinearLayout>